# FastAPI-PDFBook-Manager

./: .gitignore  README.md  ex.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: api_v1.py
app/api/endpoints/: book.py  common.py
app/core/: config.py
app/database/: db.py
app/models/: book.py
app/schemas/: book.py
app/static/css/: style.css
app/templates/: base.html  book_form.html  book_list.html  index.html
app/utils/: file_scanner.py
